fix dropdown list width and visibility of input text

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@ input {
   font-size: 1em;
   border: 1px solid #fff;
   border-radius: 10px;
+  text-shadow: -1px 1px 2px #000;
 }
 
 ::placeholder {
@@ -73,7 +74,6 @@ input {
   align-items: center;
   font-size: 2.5em;
   color: #fff;
-  text-shadow: -2px 1px 2px #000;
   text-shadow: -1px 1px 2px #000, 1px 2px 6px #000, 1px -1px 0 #000,
     -1px -1px 0 #000;
 }
