--- a/src/dropDown.css
+++ b/src/dropDown.css
@@ -1,6 +1,6 @@
 .city-list  {
   border: 2 px solid #0000;
-  border-radius: 0 0px 10px 10px;
+  border-radius: 5px 5px 10px 10px;
   cursor: pointer;
   font-size: 1.2em;
   list-style-type: none;
@@ -8,19 +8,18 @@
   margin: 0;
   position: fixed;
   z-index: 1;
-  width:46%;
+  width:45%;
   background-color: rgb(255, 255, 255, 0.5);
 }
 .city-list li {
   padding-bottom: 3px;
-}
-.city-list li:focus {
-  outline: none;
-  color: blue;
   border: 1 px solid #0000;
 }
+
 
 .city-list li:hover {
   background-color: #434347;
   outline: none;
+  border-radius: 5px;
+  padding: 5px;
 }
